tests/fixtures/valid/run_struct_mutation.lby
struct Counter
    value i64
    step i64

fn main -> i64
    let c Counter = Counter(0, 3)
    c.value = 10
    c.value += c.step
    c.step -= 1
    c.value * c.step
