tests/fixtures/invalid/unsupported_catch.lby
fn main -> i64
    catch
        0
    1
